syntax = "proto3";

package adasmap_diagnosis;

message AdasMapDiagnosisInfo {
  double time_stamp = 1;
  uint32 front_module_fail = 2;
  uint32 input_signal_invalid = 3;
  uint32 module_running_error = 4;
  uint32 is_dtc = 5;
  double reserved = 6;
}

message AdasMapHeartBeats {
  uint32 heart_beats = 1;
}

