syntax = "proto2";

import "perception_base.proto";
package CameraProto;

enum CameraType {
  CameraType_PinHole = 0;
  CameraType_FishEye = 1;
}

enum CameraVersion {
  CameraVersion_CV = 0;
  CameraVersion_VCS = 1;
}

enum CalibrationStatus {
  CalibrationStatus_Default = 0;
  CalibrationStatus_IntrinsicDone = 1;
  CalibrationStatus_ExtrinsicDone = 2;
}

message CameraValidHeight {
  optional int32 left_y = 1;
  optional int32 right_y = 2;
}

message VCSParam {
  repeated float rotation = 1;
  repeated float translation = 2;
}

message DistortParam {
  repeated float param = 1;
}

message CameraParam {
  optional float focal_u = 1;
  optional float focal_v = 2;
  optional float center_u = 3;
  optional float center_v = 4;
  optional float camera_x = 5;
  optional float camera_y = 6;
  optional float camera_z = 7;
  optional float pitch = 8;
  optional float yaw = 9;
  optional float roll = 10;
  optional int32 type = 11 [default = 0];
  optional float fov = 12;
  optional int32 version = 13 [default = 0];
  optional .CameraProto.CalibrationStatus cali_status = 14;
  optional .CameraProto.CameraValidHeight valid_height = 15;
  optional .CameraProto.DistortParam distort = 20;
  optional .CameraProto.VCSParam vcs = 21;
  optional .PerceptionBaseProto.CameraMatrix mat = 30;
  optional string vendor = 50;
  optional int64 time_stamp = 60;
  optional int32 cam_id = 61;
  optional int32 frame_id = 62;
}

