syntax = "proto3";

import "fusion_common.proto";
package FusionProto;

message FreeSpacePoint {
  .FusionCommonProto.PointType type = 1;
  .FusionCommonProto.Point2DPosition position = 2;
  int32 confidence = 3;
  .FusionCommonProto.PointDetectedSensor detected_sensor = 4;
}

message FusFreeSpace {
  double time_stamp = 1;
  repeated .FusionProto.FreeSpacePoint points = 2;
}

message RadarFreeSpace {
  double time_stamp = 1;
  repeated .FusionProto.FreeSpacePoint points = 2;
}

message VisionFreeSpace {
  double time_stamp = 1;
  repeated .FusionProto.FreeSpacePoint points = 2;
}

