syntax = "proto3";

import "common.proto";
package RadarProto;

message RadarDetection {
  double longitudinal_distance = 1;
  double lateral_distance = 2;
  double vertical_distance = 3;
  double azimuth = 4;
  double elevation_angle = 5;
  bool elevation_validy = 6;
  double radial_acceleration = 7;
  double radial_velocity = 8;
  double radius = 9;
  double rcs = 10;
  double snr = 11;
  int32 point_id = 12;
  int32 obj_id = 13;
  .CommonProto.PointMotionState motion_status = 14;
}

message RadarFsPoint {
  .CommonProto.PointType type = 1;
  .CommonProto.Point2DPosition position = 2;
  .CommonProto.PointMotionState motion_state = 3;
}

message RadarObject {
  int32 track_id = 1;
  double longitudinal_distance = 2;
  double lateral_distance = 3;
  double vertical_distance = 4;
  double longitudinal_absolute_velocity = 5;
  double lateral_absolute_velocity = 6;
  double longitudinal_relative_velocity = 7;
  double lateral_relative_velocity = 8;
  double longitudinal_absolute_acceleration = 9;
  double lateral_absolute_acceleration = 10;
  double longitudinal_relative_acceleration = 11;
  double lateral_relative_acceleration = 12;
  double length = 13;
  double width = 14;
  double height = 15;
  double heading_angle = 16;
  .CommonProto.ObjectClass classfication = 17;
  double exist_prob = 18;
  double obstacle_prob = 19;
  int32 loss_num = 20;
  int32 points_count = 21;
  int32 age = 22;
  int32 region_id = 23;
  repeated .CommonProto.Point2DPosition obj_refer_points = 24;
}

message RadarDetections {
  double time_stamp = 1;
  repeated .RadarProto.RadarDetection detections = 2;
  repeated .CommonProto.SensorParameters sensors_parameters = 3;
  int32 frame_index = 4;
}

message RadarObjects {
  double time_stamp = 1;
  repeated .RadarProto.RadarObject objs = 2;
  repeated .CommonProto.SensorParameters sensors_parameters = 3;
  int32 frame_index = 4;
}

message RadarFreeSpace {
  double time_stamp = 1;
  repeated .RadarProto.RadarFsPoint points = 2;
  repeated .CommonProto.SensorParameters sensors_parameters = 3;
  int32 frame_index = 4;
}

message RadarPedData {
  double time_stamp = 1;
  int32 ped_result = 2;
  int32 ped_azi = 3;
  double ped_xm_low = 4;
  double ped_xm_up = 5;
}

